fix(view-organizacao-interna): add overflow-x: hidden in organization html

--- a/client/src/Views/Organization/Organization.css
+++ b/client/src/Views/Organization/Organization.css
@@ -1,9 +1,9 @@
-/* @font-face {
-	font-family: Austral-Sans;
-	src: url(../../);
-} */
+html{
+    overflow-x: hidden;
+}
 
 .organization{
     height: 138px;
     width: 100vw;
+    
 }
